# jsonformatter

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish_to_pypi.yml  run_tests.yml
examples/djangodemo/: manage.py
examples/djangodemo/demo1/: apps.py
examples/djangodemo/djangodemo/: asgi.py  settings.py  urls.py  wsgi.py
examples/flask_demo/: flask_app.py  requirements.txt
examples/tornado_demo/: tornado_app.py
jsonformatter/: __init__.py  jsonformatter.py
src/jsonformatter/: __init__.py  jsonformatter.py
test/: __main__.py  logger_config.ini  test.py  test_basic_config.py  test_code_config.py  test_custom_attribute_lower_v04.py  test_custom_attribute_v04.py  test_dict_config.py  test_file_config.py  test_json_dumps.py  test_mix.py  test_multi_attrs_in_one.py  test_windows.py
tests/: test.py  test_windows.py
