[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jsonformatter"
version = "0.3.4"
description = 'Python log in json format.'
readme = "README.md"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: Implementation :: CPython',
    'Topic :: Utilities',
]
authors = [
    { name = "MyColorfulDays", email = "my_colorful_days@163.com" },
]
urls = { Homepage = "https://github.com/MyColorfulDays/jsonformatter.git" }
requires-python = ">=2.7"
dependencies = []

[project.license]
file = "LICENSE"
